--- a/main.css
+++ b/main.css
@@ -15,21 +15,22 @@
 
 .produto {} /* bloco */
 
-.produto-imagem { /* elemento */
+.produto__imagem { /* elemento */
     width: 100%;
 }
 
-.produto-nome { /* elemento */
+.produto__nome { /* elemento */
     font-size: 1.2em;
     margin: 8px 0;
 }
 
-.produto-descricao { /* elemento */
+.produto__descricao { /* elemento */
     color: gray;
 }
 
-.em-destaque { /* modificador */
+.em__destaque { /* modificador */
     border: 2px solid gold;
     padding: 8px;
     background-color: #ffff42;
+
 }
